samples/_failures_safe/1761356571_80320c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f462176.c: In function ‘main’:
./samples/SAFE/__tmp_5f462176.c:150:12: error: missing terminating " character
  150 |     printf("Enter choice
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_5f462176.c:150:5: error: expected expression at end of input
  150 |     printf("Enter choice
      |     ^~~~~~
./samples/SAFE/__tmp_5f462176.c:150:5: error: expected declaration or statement at end of input
